V2150: Aggiornamenti in alcuni Sinottici

--- a/Prevu.Synoptics.V2150_Planeta/Pages/P288.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P288.xaml
@@ -62,8 +62,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="247" StatusComponent="292-01-MA1" Canvas.Left="1145" Canvas.Top="524" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="304" StatusComponent="291-01-MA1" Canvas.Left="1138" Canvas.Top="449" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="247" StatusComponent="292-01-MA1" Canvas.Left="1145" Canvas.Top="524" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="304" StatusComponent="291-01-MA1" Canvas.Left="1138" Canvas.Top="449" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="213" StatusComponent="246-01-MA1" Color="Water" Canvas.Left="282" Canvas.Top="130" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="262" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="381" Canvas.Top="187" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -75,7 +75,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="323" StatusComponent="293-01-MA1" Canvas.Left="1065" Canvas.Top="675"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="323" StatusComponent="293-01-MA1" Canvas.Left="1065" Canvas.Top="675"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="186" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="471" Canvas.Top="680">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -241,9 +241,9 @@
         <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="600" Canvas.Top="723" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="283-01-MA1" JumpToLabel="457-01-MA1" Canvas.Left="584" Canvas.Top="25" Direction="Left"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Center" JumpFromLabel="283-01-MA1" JumpToLabel="477-01-MA1" Canvas.Left="639" Canvas.Top="98" Direction="Left"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="293-01-MA1" JumpToLabel="110-41-LT1" Canvas.Left="1387" Canvas.Top="641"/>
-        <Labels:JumpLabel JumpFromLabel="292-01-MA1" JumpToLabel="232-01-MA1" Canvas.Left="1387" Canvas.Top="490" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="229-01-MA1" Canvas.Left="1387" Canvas.Top="415" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="293-01-MA1" JumpToLabel="110-41-LT1" Canvas.Left="1387" Canvas.Top="642"/>
+        <Labels:JumpLabel JumpFromLabel="292-01-MA1" JumpToLabel="232-01-MA1" Canvas.Left="1387" Canvas.Top="492" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="229-01-MA1" Canvas.Left="1387" Canvas.Top="416" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="273" Canvas.Top="26" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="246-01-MA1" Canvas.Left="217" Canvas.Top="98" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="283-01-MA1" Canvas.Left="356" Canvas.Top="194"/>
