--- a/Prevu.Synoptics.V2150_Planeta/Pages/P350.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P350.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P350" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="75" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="915" Canvas.Top="277" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="75" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="915" Canvas.Top="241" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -19,7 +19,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="75" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="1038" Canvas.Top="301" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="75" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="1038" Canvas.Top="265" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -29,13 +29,13 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="207" StatusComponent="341-01-MA1" PipeHeight="Medium" Canvas.Left="252" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="211" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="106" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="211" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="222" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="216" Canvas.Top="78"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="207" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="1071" Canvas.Top="334"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="334" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="623" Canvas.Top="244"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1" Canvas.Left="416" Canvas.Top="301">
+        <Labels:Pipe Width="207" StatusComponent="341-01-MA1" PipeHeight="Medium" Canvas.Left="252" Canvas.Top="56" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="211" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="70" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="211" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="222" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="216" Canvas.Top="42"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="207" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="1071" Canvas.Top="298"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="334" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="623" Canvas.Top="208"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="186" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1" Canvas.Left="398" Canvas.Top="283">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -285,16 +285,16 @@
             </Rectangle.RenderTransform>
         </Rectangle>
         <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1441" Canvas.Top="435" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_WCE_Centrifuge Canvas.Left="432" Canvas.Top="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_SCW_Screw_wHopper Canvas.Left="894" Canvas.Top="214" Height="188" Width="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="432" Canvas.Top="30" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_SCW_Screw_wHopper Canvas.Left="894" Canvas.Top="178" Height="188" Width="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="950" Canvas.Top="483" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-WASHING" Canvas.Left="186" Canvas.Top="69"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="376-01-MA1" JumpToLabel="380-01-MA1" Canvas.Left="1232" Canvas.Top="304"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-WASHING" Canvas.Left="186" Canvas.Top="33"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="376-01-MA1" JumpToLabel="380-01-MA1" Canvas.Left="1232" Canvas.Top="268"/>
         <Labels:JumpLabel JumpFromLabel="354-HEAT" JumpToLabel="330-WASHING" Direction="Left" Canvas.Left="165" Canvas.Top="485" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="371-VIEW" DetailsPageName="D371" HideComponentName="True" Canvas.Left="637" Canvas.Top="419"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="354-HEAT" DetailsPageName="D354" Canvas.Left="257" Canvas.Top="612"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="376-HOPPER" DetailsPageName="D376" HideComponentName="True" Canvas.Left="875" Canvas.Top="272"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="376-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="1084" Canvas.Top="174"/>
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="376-HOPPER" DetailsPageName="D376" HideComponentName="True" Canvas.Left="875" Canvas.Top="236"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="376-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="1084" Canvas.Top="138"/>
         <Labels:DeviceLabel ComponentName="371-ACS" RenderTransformOrigin="0.5,0.52" Canvas.Left="538" Canvas.Top="419" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="370-44-FT1" Canvas.Left="600" Canvas.Top="563"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="377-21-CV1" Canvas.Left="1123" Canvas.Top="564"/>
@@ -302,13 +302,13 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="373-01-MA1" Canvas.Left="520" Canvas.Top="686"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="370-25-CV1" Canvas.Left="393" Canvas.Top="447"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="370-42-TT1" Canvas.Left="804" Canvas.Top="724"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="350-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="662" Canvas.Top="107"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="350-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="662" Canvas.Top="71"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="370-41-LT1" Canvas.Left="700" Canvas.Top="724"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="377-01-MA1" Canvas.Left="1042" Canvas.Top="682"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="373-43-CT1" Canvas.Left="405" Canvas.Top="686"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="377-23-CV1" Canvas.Left="1275" Canvas.Top="450"/>
         <Labels:DeviceLabel ComponentName="377-71-ECS2" Canvas.Left="1366" Canvas.Top="552" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="376-61-LEV" Loaded="DeviceLabel_Loaded" Canvas.Left="775" Canvas.Top="272"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="376-61-LEV" Loaded="DeviceLabel_Loaded" Canvas.Left="775" Canvas.Top="236"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="352-01-MA1" Canvas.Left="956" Canvas.Top="564"/>
 
     </Canvas>
