--- a/Prevu.Synoptics.V2150_Planeta/Pages/P510.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P510.xaml
@@ -395,9 +395,9 @@
         </Misc:DashedLine>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="351" Canvas.Left="62" Canvas.Top="595" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <TextBlock TextWrapping="Wrap" Height="50" Width="94" TextAlignment="Center" FontSize="36" Foreground="Black" FontWeight="Bold" Canvas.Left="417" Canvas.Top="421" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Text="S7"/><Run Language="it-it" Text="11"/></TextBlock>
-        <TextBlock Width="94" VerticalAlignment="Top" Canvas.Top="230" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="790" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S710"/></TextBlock>
+        <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="230" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="786" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S710"/></TextBlock>
         <TextBlock TextWrapping="Wrap" Height="50" Width="94" TextAlignment="Center" FontSize="36" Foreground="Black" FontWeight="Bold" HorizontalAlignment="Left" Canvas.Left="1235" Canvas.Top="421" VerticalAlignment="Center"><Run Language="it-it" Text="S720"/></TextBlock>
-        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="510-01-MA1" JumpToLabel="466-01-MA1" Canvas.Left="41" Canvas.Top="67"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="510-01-MA1" JumpToLabel="466-01-MA1" Canvas.Left="29" Canvas.Top="67"/>
         <Labels:JumpLabel JumpFromLabel="535-01-MA1" JumpToLabel="546-01-MA1" Canvas.Left="154" Canvas.Top="753" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="519-01-MA1" JumpToLabel="380-23-CV1" Canvas.Left="1063" Canvas.Top="107" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="545-01-MA1" JumpToLabel="546-01-MA1" Canvas.Left="1436" Canvas.Top="753" HorizontalAlignment="Center" VerticalAlignment="Center"/>
