--- a/Prevu.Synoptics.V2150_Planeta/Pages/P608.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P608.xaml
@@ -20,7 +20,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="212" StatusComponent="601-01-MA1" Canvas.Left="980" Canvas.Top="329" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="216" StatusComponent="601-01-MA1" Canvas.Left="978" Canvas.Top="331" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -301,8 +301,8 @@
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="325" Canvas.Top="770" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1007" Canvas.Top="745" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="100" Canvas.Top="285" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="43" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="561" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S710"/></TextBlock>
-        <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="43" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="660" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S810"/></TextBlock>
+        <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="43" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="550" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S710"/></TextBlock>
+        <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="43" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="672" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S810"/></TextBlock>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="778" Canvas.Left="270" Canvas.Top="432" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
