--- a/Prevu.Synoptics.V2150_Planeta/Pages/P810.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P810.xaml
@@ -44,7 +44,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="239" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="511" Canvas.Top="539" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="253" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="511" Canvas.Top="539" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="258" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="387" Canvas.Top="663" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -55,8 +55,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="372" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="740" Canvas.Top="49" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Width="496" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="497" Canvas.Top="294" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="358" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="754" Canvas.Top="49" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="496" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="511" Canvas.Top="294" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
