--- a/Prevu.Synoptics.V2150_Planeta/Pages/P020.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P020.xaml
@@ -254,5 +254,6 @@
         <Labels:DeviceLabel ComponentName="026-01-MA1" Canvas.Left="513" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="670" Canvas.Left="284" HorizontalAlignment="Left" ComponentName="029-01-MA1"/>
         <Labels:DeviceLabel ComponentName="030-01-YA1" Canvas.Left="1044" Canvas.Top="406" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="020-01-YA1" Canvas.Left="77" Canvas.Top="537" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
