--- a/Prevu.Synoptics.V2150_Planeta/Pages/P608.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P608.xaml
@@ -318,7 +318,7 @@
         <Labels:JumpLabel JumpFromLabel="616-01-MA1" JumpToLabel="808-21-CV1" Canvas.Left="1287" Canvas.Top="737" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="557-ED-CUR" DetailsPageName="D557" Canvas.Left="183" Canvas.Top="405" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="608-01-YA1" Canvas.Left="1373" Canvas.Top="308" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="608-02-MA1" Canvas.Left="1373" Canvas.Top="363" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="608-02-MA1" Canvas.Left="1373" Canvas.Top="378" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="548-01-MA1" Canvas.Left="79" Canvas.Top="231" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="546-01-MA1" Canvas.Left="273" Canvas.Top="205" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="556-01-MA1" Canvas.Left="433" Canvas.Top="344" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -332,16 +332,16 @@
         <Labels:DeviceLabel ComponentName="600-01-MA1" Canvas.Left="741" Canvas.Top="262" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="601-01-MA1" Canvas.Left="945" Canvas.Top="262" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="608-01-MA1" Canvas.Left="1246" Canvas.Top="261" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="608-21-CV1" Canvas.Left="1146" Canvas.Top="417" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="1135" Canvas.Top="332" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:CV_Valve_001.RenderTransform>
+        <Labels:DeviceLabel ComponentName="608-21-CV1" Canvas.Left="1146" Canvas.Top="411" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_Valve_wColor Canvas.Left="1164" Canvas.Top="368" Color="Water" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Center" Width="50">
+            <Machines:V01_CV_Valve_wColor.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
+                    <ScaleTransform ScaleX="-1"/>
                     <SkewTransform/>
                     <RotateTransform/>
-                    <TranslateTransform X="-0.5" Y="-1.95"/>
+                    <TranslateTransform/>
                 </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
+            </Machines:V01_CV_Valve_wColor.RenderTransform>
+        </Machines:V01_CV_Valve_wColor>
     </Canvas>
 </UserControl>
