V2150: signal label fix on D890,D920,D950

--- a/Prevu.Synoptics.V2150_Planeta/Details/D950.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Details/D950.xaml
@@ -11,11 +11,10 @@
               d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="427" Width="452">
         <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="10" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-61-LEV" SignalName="LSHA1" Canvas.Left="54" Canvas.Top="39"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-61-LEV" SignalName="LSH" Canvas.Left="101" Canvas.Top="94" />
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-62-LEV" SignalName="LSHA" Canvas.Left="307" Canvas.Top="39"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-62-LEV" SignalName="LSH" Canvas.Left="307" Canvas.Top="94" />
-        <Labels:SignalLabel ComponentName="950-61-LEV" SignalName="LSHA2" Canvas.Left="159" Canvas.Top="39" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-61-LEV" SignalName="LSHA" Canvas.Left="59" Canvas.Top="39"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-61-LEV" SignalName="LSH" Canvas.Left="59" Canvas.Top="94" />
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-62-LEV" SignalName="LSHA" Canvas.Left="272" Canvas.Top="39"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-62-LEV" SignalName="LSH" Canvas.Left="272" Canvas.Top="94" />
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-61-LEV" Canvas.Left="77" Canvas.Top="219"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-62-LEV" Canvas.Left="285" Canvas.Top="219"/>
     </Canvas>
